<resources>
    <string name="app_name">Reminders</string>
    <string name="home">Inicio</string>
    <string name="newReminder">Nuevo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="reminderTitle">Titulo del Recordatorio</string>
    <string name="reminderDesc">Descripción del Recordatorio</string>
    <string name="setPriorityReminder">Seleccione la prioridad de su recordatorio</string>
    <string name="urgent">Urgente</string>
    <string name="important">Importante</string>
    <string name="normal">Normal</string>
    <string name="register">Registrar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="reminders">Recordatorios</string>
    <string name="update">Modificar</string>
    <string name="cancel">Cancelar</string>
</resources>
